[dozmod] ldapfilters: Fix list (attr/value)

--- a/modules-available/dozmod/templates/ldapfilters.html
+++ b/modules-available/dozmod/templates/ldapfilters.html
@@ -20,8 +20,8 @@
 	{{#ldapfilters}}
 	<tr>
 		<td>{{filtername}}</td>
-		<td>{{attribute}}</td>
-		<td>{{value}}</td>
+		<td>{{filterkey}}</td>
+		<td>{{filtervalue}}</td>
 		{{#hasEditPermission}}
 		<td class="text-center">
 			<a class="btn btn-xs btn-primary" href="?do=dozmod&section=ldapfilters&show=edit&filterid={{filterid}}">
