[serversetup-bwlp] Link systemmodel to machine list

--- a/modules-available/serversetup-bwlp/templates/localboot.html
+++ b/modules-available/serversetup-bwlp/templates/localboot.html
@@ -31,7 +31,7 @@
 		</tr>
 		{{#exceptions}}
 			<tr>
-				<td>{{systemmodel}}</td>
+				<td><a href="?do=statistics&show=list&filters=systemmodel+%3D+{{systemmodel}}">{{systemmodel}}</a></td>
 				<td class="text-right">{{cnt}}</td>
 				<td>
 					<select class="form-control" name="override[{{systemmodel}}]">
