[serversetup-bwlp] Fix saving default; add missing lang tag

--- a/modules-available/serversetup-bwlp/templates/localboot.html
+++ b/modules-available/serversetup-bwlp/templates/localboot.html
@@ -25,7 +25,7 @@
 	</h3>
 	<table class="table">
 		<tr>
-			<th>{{lang_name}}</th>
+			<th>{{lang_systemmodel}}</th>
 			<th class="slx-smallcol">{{lang_count}}</th>
 			<th class="slx-smallcol">{{lang_override}}</th>
 		</tr>
