[statistics] Track and display memory/tmp usage of clients

--- a/modules-available/statistics/templates/filterbox.html
+++ b/modules-available/statistics/templates/filterbox.html
@@ -101,7 +101,10 @@ var slxFilterNames = {
 	currentuser: '{{lang_currentUser}}',
 	subnet: '{{lang_subnet}}',
 	runtime: '{{lang_runtimeHours}}',
-	hostname: '{{lang_hostname}}'
+	hostname: '{{lang_hostname}}',
+	live_swapfree: '{{lang_swapFree}}',
+	live_memfree: '{{lang_memFree}}',
+	live_tmpfree: '{{lang_tmpFree}}'
 };
 
 slxLocations = {{{locations}}};
