--- a/modules-available/statistics/style.css
+++ b/modules-available/statistics/style.css
@@ -9,3 +9,35 @@
     font-size: 20px;
     line-height: 40px;
 }
+
+.meter {
+    position: relative;
+    border-radius: 5px;
+    border: 1px solid #999;
+    background: linear-gradient(to right, #9e6 0%, #fb8 66%, #f32 100%);
+    height: 1.25em;
+    padding: 0;
+    width: 100%;
+    overflow: hidden;
+}
+
+.meter .bar {
+    position: absolute;
+    top: 0;
+    height: 100%;
+    right: 0;
+    background: #efe;
+    display: inline-block;
+    padding: 0;
+    margin: 0 0 0 auto;
+}
+
+.meter .text {
+    position: absolute;
+    right: 5px;
+    overflow: visible;
+    font-size: 8pt;
+    white-space: nowrap;
+    z-index: 1000;
+    text-shadow: #fff 1px 1px;
+}
