--- a/modules-available/serversetup-bwlp/templates/menu-edit.html
+++ b/modules-available/serversetup-bwlp/templates/menu-edit.html
@@ -52,7 +52,7 @@
 					</thead>
 					<tbody id="table-body" style="overflow: auto;">
 					{{#entries}}
-					<tr>
+					<tr class="{{highlight}}">
 						<input type="hidden" class="sort-val" name="entry[{{menuentryid}}][sortval]" value="{{sortval}}">
 						<input type="hidden" name="entry[{{menuentryid}}][hidden]" value="0">
 						<td class="drag-handler" style="cursor: pointer;text-align: center; vertical-align: middle;">
