[serversetup-bwlp-ipxe] Fix boot entry management

--- a/modules-available/serversetup-bwlp-ipxe/templates/ipxe-new-boot-entry.html
+++ b/modules-available/serversetup-bwlp-ipxe/templates/ipxe-new-boot-entry.html
@@ -14,7 +14,7 @@
 		<form method="post" action="?do=serversetup">
 			<input type="hidden" name="token" value="{{token}}">
 			<input type="hidden" name="action" value="savebootentry">
-			<input type="hidden" name="entryid" value="{{entryid}}">
+			<input type="hidden" name="entryid" value="{{oldentryid}}">
 
 			<div class="form-group">
 				<div class="radio">
