--- a/modules-available/main/templates/main-menu.html
+++ b/modules-available/main/templates/main-menu.html
@@ -19,7 +19,7 @@
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 			</button>
-			<a class="navbar-brand" href="?do=Main">OpenSLX</a>
+			<a class="navbar-brand" href="?do=Main">{{product_name}}</a>
 			<div id="navbar-sub" class="gray small"></div>
 		</div>
 		<!-- Collect the nav links, forms, and other content for toggling -->
