[locations] Fix display with old serversetup module

--- a/modules-available/locations/templates/locations.html
+++ b/modules-available/locations/templates/locations.html
@@ -22,7 +22,7 @@
 		</div>
 	{{/overlapOther}}
 
-	<table class="table table-condensed locations" style="margin-bottom:0px">
+	<table class="table table-condensed locations" style="margin-bottom:0">
 		<tr>
 			<th width="100%">{{lang_locationName}}</th>
 			<th>
