--- a/modules-available/serversetup-bwlp-ipxe/templates/menu-edit.html
+++ b/modules-available/serversetup-bwlp-ipxe/templates/menu-edit.html
@@ -213,7 +213,7 @@
 					</div>
 					<div class="modal-footer">
 						<button type="button" class="btn btn-default" data-dismiss="modal">{{lang_cancel}}</button>
-						<button type="button" class="btn btn-primary" id="choose-entry">{{lang_save}}</button>
+						<button type="button" class="btn btn-primary" id="choose-entry">{{lang_ok}}</button>
 					</div>
 				</div>
 			</div>
